# saci

./: CMakeLists.txt  Jamroot
demo/checkbox/qt/: main.cpp
demo/enable/qt/: main.cpp
demo/label/qt/: main.cpp
demo/push_btn/qt/: main.cpp
demo/radio_btn/qt/: main.cpp
demo/slider/qt/: main.cpp
demo/spinbox/qt/: main.cpp
demo/textedit/qt/: main.cpp
demo/tree/qt/: main.cpp
include/boost/serialization/saci/: branch_base.hpp  branch_impl.hpp  branch_node.hpp  branches_impl.hpp  check.hpp  collection_branch_node.hpp  leaves_impl.hpp  node_base.hpp  root.hpp  tree.hpp
include/coruja/object/: any_object.hpp
include/saci/: version.hpp
include/saci/mvp/presenter/holder/: dyn_presenter.hpp  dyn_presenters.hpp  presenter.hpp
include/saci/qt/: base_widget.hpp
include/saci/qt/checkbox/: checkbox.hpp
include/saci/qt/checkbox/detail/: view_to_model.hpp
include/saci/qt/label/: label.hpp
include/saci/qt/push_btn/: push_btn.hpp
include/saci/qt/push_btn/detail/: clicked.hpp
include/saci/qt/radio_btn/: radio_btn.hpp
include/saci/qt/radio_btn/detail/: view_to_model.hpp
include/saci/qt/slider/: slider.hpp
include/saci/qt/slider/detail/: view_to_model.hpp
include/saci/qt/spinbox/: spinbox.hpp
include/saci/qt/spinbox/detail/: view_to_model.hpp
include/saci/qt/textedit/: textedit.hpp
include/saci/qt/textedit/detail/: view_to_model.hpp
include/saci/tree/model/: branch.hpp  branch_base.hpp  branch_impl.hpp  branches.hpp  branches_impl.hpp  leaf.hpp  leaf_impl.hpp  leaves.hpp  leaves_impl.hpp  node_base.hpp  node_base_common.hpp  root.hpp  tree.hpp  tree_io.hpp  with_ctx.hpp
include/saci/tree/model/detail/: T_is_function_obj.hpp  apply_node_impl.hpp  branch.hpp  expand.hpp  get_branch_impl.hpp  get_branch_node.hpp  get_collection.hpp  get_object.hpp  init_children.hpp  is_collection_leaf.hpp  leaf.hpp  node_impl_fwd.hpp  result_of_get_object.hpp  sync_with_domain.hpp  tag.hpp  update_parent_ptr.hpp  visibility.hpp  with_ctx_base.hpp
include/saci/tree/view/qt/: tree.hpp
include/saci/tree/view/qt/detail/: erase_node.hpp  insert_node.hpp  item2check.hpp  item2obool.hpp  node2conn.hpp  node2item.hpp  propagates_check.hpp  propagates_check.moc  propagates_collapse.hpp  propagates_collapse.moc  propagates_expand.hpp  propagates_expand.moc  propagates_expand_collapse.hpp  remove_selected_nodes.hpp
test/: branch.cpp  leaf.cpp  move.cpp  root.cpp
